fix(whatsapp-web): #side background gaps

--- a/styles/whatsapp-web/catppuccin.user.less
+++ b/styles/whatsapp-web/catppuccin.user.less
@@ -115,6 +115,8 @@
     #WDS(modal-backdrop-solid, @crust);
 
     #WDS(surface-default, @mantle);
+    --background-default: var(--WDS-surface-default);
+    --search-container-background: var(--WDS-surface-default);
     #WDS(surface-emphasized, @base);
     #WDS(surface-elevated-default, @base);
     #WDS(surface-elevated-emphasized, mix(@text, @base, @emphasize));
